2009-11-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.83

2009-11-24  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fix problems in the focus logic.

	* matchbox/core/mb-window-manager.h: New member focus_after_stacking
	to flag when we have postponed assigning the focus to happen after
	stacking.
	* matchbox/core/mb-window-manager.c (mb_wm_focus_client_as_stacked):
	Refactored the 'focus as stacked' logic here out from
	mb_wm_unfocus_client.
	(mb_wm_manage_preexisting_wins): Set the focus_after_stacking flag to
	assign focus to the right place after stacking.
	(mb_wm_focus_client): If the client is unrealized, assume it's not
	stacked yet and set focus_after_stacking to check focus later.
	* matchbox/core/mb-wm-client.c (mb_wm_client_needs_stack_sync): Remove
	unused function.

2009-11-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes: NB#145690 - Application manager finishing an installation in
	background blocks keyboard input in Terminal

	* matchbox/core/mb-window-manager.c (mb_wm_focus_client): If the
	window is not realized (i.e. it has just appeared), focus according to
	the stacking order.
	(mb_wm_sync): Don't compile the timer code if we have G_DEBUG_DISABLE.

2009-11-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes: NB#147560 - Live Search from Desktop stops responding in a
	sceanrio.

	* matchbox/core/mb-window-manager.[ch] (mb_wm_get_server_time): New
	utility to get a proper X server time stamp by means of zero-length
	append to a root window property and catching the corresponding
	PropertyNotify.
	(mb_wm_focus_client): Remove useless if (both branches have the same
	code).
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_set_focus): Use a
	proper time stamp in the WM_TAKE_FOCUS ClientMessage.

2009-11-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.82

	* matchbox/core/mb-wm-client.[ch] (mb_wm_client_is_unmap_confirmed,
	mb_wm_client_set_unmap_confirmed): New API for detecting clients that